--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,14 @@ button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
-li{
+#bloc-8 li{
     list-style: none;
+    padding-bottom: 5px;
+    color: #212121;
+}
+#bloc-8 h6{
+    font-size: 15px;
+    opacity: 0.8;
 }
 #title_bloc3{
     font-size: 20px;
@@ -42,14 +48,16 @@ li{
     font-weight: normal;
     color: #665E81;
 }
-img .tabfocus1:focus{
-    margin: 2%;
-    box-shadow: 0 0 20px #000;
+#logo_header:focus, #logo_header:hover{
+    transform: scale(1.3);
+    box-shadow: 0 0 10px black;
 }
 .tab_focus1:focus{
-    box-shadow: 0 0 20px #000000;
+    transform: scale(1.3);
+    text-shadow: 0 0 10px black;
 }
 .tab_focus2:focus{
+    transform: scale(1.3);
     box-shadow: 0 0 20px #FFFFFF;
 }
 blockquote p{
