--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,32 @@ button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
-#bloc-8 li{
+#network{
     list-style: none;
-    padding-bottom: 5px;
+    padding: 10px 0 35px 0;
     color: #212121;
 }
-#bloc-8 h6{
+address{
+    color: black;
+}
+address p{
+    padding: 25px 0 30px 0;
+}
+address span{
+    text-decoration: underline dotted;
+    font-size: 16px;
+    font-weight: bold;
+}
+#footer_links li{
+    color: #212121;
+}
+#footer_links li a{
+    padding: 16px;
+}
+#footer_links h6{
     font-size: 15px;
+    text-decoration: underline;
+    text-decoration-style: dotted;
     opacity: 0.8;
 }
 #title_bloc3{
@@ -48,7 +67,7 @@ button {
     font-weight: normal;
     color: #665E81;
 }
-#logo_header:focus, #logo_header:hover{
+.logo_header:focus, .logo_header:hover, #chevron:focus, #chevron:hover{
     transform: scale(1.3);
     box-shadow: 0 0 10px black;
 }
@@ -338,7 +357,7 @@ a:hover {
     padding-left: 0;
 }
 
-#bloc-1-hero h1 {
+#presentations h1 {
     font-size: 32px;
 }
 
@@ -730,7 +749,7 @@ a {
 }
 
 p {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -775,7 +794,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #000!important;
 }
 
 h4 {
@@ -823,7 +842,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #F3A27C;
 }
 
 .tc-white {
