refonte html page2 v4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ address p{
 }
 address span{
     text-decoration: underline dotted;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: bold;
 }
 .footer_links li{
