--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,28 +12,41 @@ button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
+#presentations span{
+    text-shadow: 1px 1px 10px black, 1px 1px 10px black, 1px 1px 10px black, 1px 1px 10px black;
+    color: #F3976C;
+}
+
 #network{
     list-style: none;
     padding: 10px 0 35px 0;
     color: #212121;
 }
-address{
+#address_info{
     color: black;
+    padding-left: 15%;
+    background-color: rgba(243, 151, 108, 0.1);
+    background-clip: content-box;
+}
+#address_info h2 span{
+    border-bottom: 5px double black;
 }
 address p{
     padding: 25px 0 30px 0;
 }
 address span{
-    text-decoration: underline dotted;
     font-size: 1em;
     font-weight: bold;
 }
 .footer_links li{
     color: #212121;
+}
+.footer_links2 li{
     list-style: none;
 }
 .footer_links li a{
     padding: 16px;
+    color: black;
 }
 .footer_links h6{
     font-size: 15px;
@@ -48,13 +61,12 @@ address span{
     font-weight: normal;
     color: black;
 }
-#title_bloc5 span{
-    position: relative;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-#button_bloc3{
-    color: black;
+#title_bloc5{
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 20px black, 1px 1px 20px black, 1px 1px 20px black;
+    color: #F3976C;
+    margin: 0 20% 0 20%;
+    padding: 2% 0 2% 0;
 }
 #title_bloc4{
     text-transform: none;
@@ -68,9 +80,16 @@ address span{
     font-weight: normal;
     color: #665E81;
 }
-.logo_header:focus, .logo_header:hover, #chevron:focus, #chevron:hover{
+.logo_header:focus, .logo_header:hover, .chevron:focus, .chevron:hover{
     transform: scale(1.3);
     box-shadow: 0 0 10px black;
+}
+.logo_header{
+    border-radius: 50px;
+}
+#logo_presentations{
+    border-radius: 50%;
+    box-shadow: 1px 1px 20px black, 1px 1px 20px black, 1px 1px 20px black, 1px 1px 20px black;
 }
 .tab_focus1:focus{
     transform: scale(1.3);
@@ -89,8 +108,9 @@ blockquote p:last-child{
     font-style: normal;
     font-size: 14px;
 }
-#button_bloc3 a{
-    line-height: 40px;
+#motivations h2, p{
+    color: black;
+    text-shadow: 1px 1px 20px #E7DDCB;
 }
 footer ul{
     padding-bottom: 50px;
@@ -164,10 +184,6 @@ a:hover {
     bottom: 0;
     left: 0;
     right: 0;
-}
-
-.texture-paper::before {
-    background: url("../img/texture-paper.png");
 }
 
 .b-parallax {
@@ -718,13 +734,12 @@ h3,
 h4,
 h5,
 h6,
-p,
 label,
-.btn,
-a {
+a,
+.btn{
     font-family: "helvetica";
     font-weight: 400;
-    color: #000!important;
+    color: black;
 }
 
 .container {
@@ -825,7 +840,7 @@ h4 {
 }
 
 .black-background {
-    background-color: #687B7C;
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
