--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ address span{
     font-weight: bold;
 }
 #footer_enterprise_identity{
-    font-size: 14px;
+    font-size: 1em;
     padding-bottom: 15px;
 }
 .footer_links span:hover, .footer_links span:focus{
@@ -61,7 +61,6 @@ address span{
 .footer_links h3{
     font-size: 14px;
     text-transform: none;
-    opacity: 0.8;
 }
 #title_bloc3{
     font-size: 20px;
@@ -809,7 +808,7 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: black !important;
 }
 
 .med-width-whitespace {
