--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,17 +55,17 @@ address span{
     list-style: none;
 }
 .footer_links li a{
-    padding: 16px;
+    padding: 1em;
     color: black;
 }
 .footer_links h3{
-    font-size: 14px;
+    font-size: 0.875em;
     text-transform: none;
 }
 #title_bloc3{
-    font-size: 20px;
+    font-size: 1.25em;
     text-transform: none;
-    line-height: 30px;
+    line-height: 1.875em;
     font-weight: normal;
     color: black;
 }
@@ -78,13 +78,13 @@ address span{
 }
 #title_bloc4{
     text-transform: none;
-    font-size: 23px;
+    font-size: 1.4em;
 }
 #title_bloc2{
     text-transform: none;
     line-height: 30px;
     padding-bottom: 20px;
-    font-size: 22px;
+    font-size: 1.3em;
     font-weight: normal;
     color: #665E81;
 }
@@ -109,12 +109,12 @@ address span{
 }
 blockquote p{
     font-style: italic;
-    font-size: 20px;
-    line-height: 22px;
+    font-size: 1.25;
+    line-height: 1.28;
 }
 blockquote p:last-child{
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875em;
 }
 #motivations h2, p{
     color: black;
