--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ a:hover {
     cursor: pointer;
 }
 p {
-    font-size: 1.2em;
+    font-size: 1.1em;
     margin-bottom: 35px;
     color: black;
 }
@@ -28,15 +28,15 @@ h1, h2, h3, h4, h5, h6, label, a, .btn{
     color: black;
 }
 h1,h2,h3,h4,h5,h6,p{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 h2 {
-    font-size: 22px;
+    font-size: 1.6em;
     line-height: 1.4em;
 }
 h3 {
-    font-size: 15px;
+    font-size: 1.3em;
     font-weight: 700;
 }
 .logo_header:focus, .logo_header:hover, .chevron:focus, .chevron:hover{
@@ -61,7 +61,6 @@ header a{
 .navbar-brand {
     height: auto;
     padding: 3px 15px;
-    font-size: 25px;
     font-weight: 600;
     line-height: 44px;
 }
@@ -139,7 +138,7 @@ header a{
     margin-top: 6px;
 }
 .showScrollTop {
-    font-size: 14px;
+    font-size: 1em;
     opacity: 1;
 }
 footer ul{
@@ -169,12 +168,11 @@ blockquote p{
 }
 blockquote p:last-child{
     font-style: normal;
-    font-size: 0.875em;
+    font-size: 1em;
 }
 #title_motivations{
     line-height: 1.3em;
-    font-size: 1.4em;
-    font-weight: normal;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 #motivations{
@@ -185,7 +183,6 @@ blockquote p:last-child{
     padding: 5%;
 }
 #title_realisations{
-    font-size: 1.4em;
     margin-bottom: 10%;
 }
 #realisations img{
@@ -199,7 +196,7 @@ a[data-lightbox] {
 a[data-lightbox]:hover::before {
     content: "+";
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-size: 32px;
+    font-size: 2.5em;
     width: 50px;
     height: 50px;
     margin-left: -25px;
@@ -234,7 +231,7 @@ a[data-lightbox]:hover img {
 }
 .close-lightbox {
     color: #FFF;
-    font-size: 30px;
+    font-size: 2.5em;
     position: absolute;
     top: 20px;
     right: 20px;
@@ -254,7 +251,7 @@ a[data-lightbox]:hover img {
 }
 .next-lightbox,
 .prev-lightbox {
-    font-size: 20px;
+    font-size: 1.8em;
     color: rgba(255, 255, 255, .9);
     background: rgba(0, 0, 0, .5);
     transition: all .2s ease-in-out;
@@ -289,10 +286,9 @@ a[data-lightbox]:hover img {
 }
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
-    font-size: 16px;
+    font-size: 1.2em;
     font-weight: 700;
 }
 #network{
@@ -306,7 +302,7 @@ a[data-lightbox]:hover img {
     color: #1b6d85;
 }
 #footer_enterprise_identity{
-    font-size: 1em;
+    font-size: 1.2em;
     padding-bottom: 15px;
 }
 .footer_links li a{
@@ -315,12 +311,13 @@ a[data-lightbox]:hover img {
 .footer_links h3{
     font-size: 1em;
 }
+.links{
+    margin-top: 10%;
+}
+
 
 /*Contacts page - listed in order of appearance*/
 #address_info{
-    color: black;
-    background-color: rgba(243, 151, 108, 0.1);
-    background-clip: content-box;
     margin-top: 5%;
 }
 #address_info h2 span{
@@ -335,7 +332,7 @@ address span{
     font-weight: bold;
 }
 form {
-    padding: 5px;
+    padding: 0 15px 0 15px;
 }
 .form-control {
     border-color: rgba(0, 0, 0, 0.1);
@@ -408,10 +405,10 @@ form {
     border-color: #364577!important;
 }
 .icon-lg {
-    font-size: 60px!important;
+    font-size: 4.5em!important;
 }
 .icon-md {
-    font-size: 30px!important;
+    font-size: 2.5em!important;
 }
 .med-width-whitespace {
     max-width: 800px;
@@ -472,6 +469,10 @@ form {
 }
 
 @media (min-width: 577px){
+    h1,h2,h3,h4,h5,h6,p{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
     .bloc-lg {
         padding: 100px 50px;
     }
@@ -479,7 +480,7 @@ form {
         padding: 50px;
     }
     .bloc-sm {
-        padding: 20px 50px;
+        padding: 20px 0 20px 0;
     }
     .bloc {
         padding-left: 20px;
@@ -504,6 +505,12 @@ form {
     }
     .logo_header:focus, .logo_header:hover, .chevron:focus, .chevron:hover{
         transform: scale(1.2);
+    }
+    .links{
+        margin-left: 25%;
+    }
+    form, #address_info{
+        padding: 0;
     }
 }
 
@@ -536,9 +543,6 @@ form {
     #lightbox-modal .modal-dialog{
         margin-top: 10%;
     }
-    .container {
-        width: 1000px;
-    }
     .voffset-lg {
         margin-top: 80px;
     }
@@ -554,14 +558,22 @@ form {
     }
     #address_info{
         margin-top: 0;
-        padding: 0 5% 0 5%;
+        margin-left: 2%;
+    }
+    .container{
+        max-width: 1000px;
     }
     address p{
         padding: 15px 0 10px 0;
     }
     form{
-        padding: 0 10% 0 10%;
+        padding: 0 5% 0 5%;
     }
+    .links{
+        margin-top: 0;
+        margin-left: 0;
+    }
+
 }
 
 @media (min-width: 992px){
@@ -573,6 +585,15 @@ form {
         margin: 0 30% 0 30%;
         padding-bottom: 2%;
     }
-
-
+    .container {
+        width: 1000px;
+    }
+    .links{
+        margin-left: 10%;
+    }
+    #address_info{
+        background-color: rgba(243, 162, 124, 0.1);
+        background-clip: content-box;
+        padding: 0 2% 0 2%;
+    }
 }
